# MINUSLAG

./: LICENSE  README.md  package-lock.json  package.json  setup_admin_bypass.ps1  verify_routing.js  verify_routing.py
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  networking.rs
